--- a/TagsEditText/src/main/res/drawable/tag_bg.xml
+++ b/TagsEditText/src/main/res/drawable/tag_bg.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+       android:shape="rectangle">
 
-    <corners
-        android:radius="14dp" />
+    <corners android:radius="14dp"/>
 
     <solid android:color="#ebf0f6" />
 
-    <stroke android:width="1dip" android:color="#ebf0f6"/>
+    <stroke
+            android:width="1dip"
+            android:color="#ebf0f6"/>
 
     <padding
-        android:bottom="0dp"
-        android:left="0dp"
-        android:right="0dp"
-        android:top="0dp" />
+            android:bottom="0dp"
+            android:left="0dp"
+            android:right="0dp"
+            android:top="0dp"/>
 
 
 </shape>
